tests/compile-fail/recursive-struct.plk
struct Foo { // ERROR: struct `Foo` is recursive
    foo: Foo,
}

struct Bar<T> {
    bar: T,
}

struct Baz { // ERROR: struct `Baz` is recursive
    bar: Bar<Baz>,
}